Code Base/objects/Materials__c.object
<CustomObject>
    <fields>
        <fullName>Certified__c</fullName>
        <label>Certified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMG_Product_Code__c</fullName>
        <label>RMG Product Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMG_Product_Description__c</fullName>
        <label>RMG Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RMG_Product_Code__c</columns>
        <columns>RMG_Product_Description__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Certified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMG-PROD{0000}</displayFormat>
        <label>ProductID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>